--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "openzeppelin-solidity"]
 	path = openzeppelin-solidity
 	url = https://github.com/OpenZeppelin/openzeppelin-solidity
+[submodule "solidity-stringutils"]
+	path = solidity-stringutils
+	url = https://github.com/Arachnid/solidity-stringutils
