--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "solidity-stringutils"]
 	path = solidity-stringutils
 	url = https://github.com/Arachnid/solidity-stringutils
+[submodule "ethereum-api"]
+	path = ethereum-api
+	url = https://github.com/oraclize/ethereum-api
