--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ethereum-api"]
 	path = ethereum-api
 	url = https://github.com/oraclize/ethereum-api
+[submodule "solidity-stringutils"]
+	path = solidity-stringutils
+	url = https://github.com/stalker474/solidity-stringutils
